<resources>
    <string name="app_name">Restaurant Reservation</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">Login</string>
    <string name="password">Password</string>
    <string name="last_name">Lastname</string>
    <string name="first_name">Firstname</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="hello_blank_fragment">hello</string>
    <string name="hello_blank_fragment_booking">hello 2</string>
    <string name="action_logout">Logout</string>
    <string name="openDrawer">Open Drawer </string>
    <string name="closeDrawer">Close Drawer </string>
    <string name="title_activity_guest_main_view">GuestMainView</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_admin_main_view">Admin View</string>
</resources>
