<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tzapt.activities.RegisterActivity">


    <EditText
        android:id="@+id/usernameEdit"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="23dp"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintLeft_toRightOf="@+id/usernameTextView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneText" />

    <LinearLayout android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px" >
        <requestFocus />
    </LinearLayout>

    <EditText
        android:id="@+id/passwordEdit"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginBottom="41dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/registerBtn"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintLeft_toRightOf="@+id/passwordLbl"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameEdit"
        app:layout_constraintVertical_bias="0.367" />

    <EditText
        android:id="@+id/lNameText"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:hint="@string/last_name"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintLeft_toRightOf="@+id/lNameLbl"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fNameText" />

    <EditText
        android:id="@+id/fNameText"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="39dp"
        android:hint="@string/first_name"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintLeft_toRightOf="@+id/fNameLbl"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/phoneText"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="23dp"
        android:hint="@string/phone_number"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintLeft_toRightOf="@+id/phoneLbl"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailText" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/prompt_username"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        app:layout_constraintLeft_toRightOf="@+id/emailLbl"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/lNameText"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.507" />

    <TextView
        android:id="@+id/passwordLbl"
        android:layout_width="133dp"
        android:layout_height="40dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:text="Password :"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextView"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/cancelBtn"
        app:layout_constraintVertical_bias="0.0" />

    <include
        layout="@layout/content_register"
        android:layout_height="0dp"
        android:layout_width="0dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/include" />

    <TextView
        android:id="@+id/lNameLbl"
        android:layout_width="133dp"
        android:layout_height="40dp"
        android:layout_marginLeft="45dp"
        android:gravity="center"
        android:text="Lastname :"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/fNameLbl" />

    <TextView
        android:id="@+id/emailLbl"
        android:layout_width="133dp"
        android:layout_height="40dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="Email :"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lNameLbl" />

    <TextView
        android:id="@+id/phoneLbl"
        android:layout_width="133dp"
        android:layout_height="40dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="23dp"
        android:gravity="center"
        android:text="Phone Nubmer : "
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLbl" />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="133dp"
        android:layout_height="40dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="23dp"
        android:gravity="center"
        android:text="Username :"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneLbl" />

    <TextView
        android:id="@+id/fNameLbl"
        android:gravity="center"
        android:layout_width="133dp"
        android:layout_height="40dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="39dp"
        android:text="Firstname :"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="110dp"
        android:layout_height="56dp"
        android:layout_marginBottom="56dp"
        android:layout_marginLeft="45dp"
        android:text="Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="110dp"
        android:layout_height="56dp"
        android:layout_marginBottom="56dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="Register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintLeft_toRightOf="@+id/cancelBtn"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="455dp" />

</android.support.constraint.ConstraintLayout>
